BREAKING: Updated variant configurations (#6)
BREAKING CHANGE

--- a/src/Button/Button.mdx
+++ b/src/Button/Button.mdx
@@ -38,7 +38,7 @@ Button groups provide an easy way to horizontally layout a row of buttons.
 
 Buttons can come in several different shapes and colors
 
-## Colors
+### Colors
 
 Use the `variant` prop for predefined button variants. More colors may be added to `theme.colors` if the defaults are not enough or need to be overridden.
 
@@ -46,10 +46,13 @@ Use the `variant` prop for predefined button variants. More colors may be added 
   <Button.Group>
     <Button variant="success">I'm Successful</Button>
     <Button variant="danger">I'm Dangerous</Button>
+    <Button variant="warning">I'm Cautious</Button>
+    <Button variant="info">I'm Informational</Button>
+    <Button variant="inverted">I'm More Common</Button>
   </Button.Group>
 </Playground>
 
-## Sizes
+### Sizes
 
 Use the `size` prop to change the size of your button.
 
@@ -63,7 +66,7 @@ Use the `size` prop to change the size of your button.
 
 ## States
 
-## Disabled
+### Disabled
 
 Add the `disabled` prop for disabled button state style.
 
@@ -71,7 +74,7 @@ Add the `disabled` prop for disabled button state style.
   <Button disabled>I'm disabled</Button>
 </Playground>
 
-## Loading
+### Loading
 
 Add the `loading` prop for loading button state style.
 
