--- a/src/Form/Radio.mdx
+++ b/src/Form/Radio.mdx
@@ -110,7 +110,7 @@ Form Radio component. Different sizes are available.
       },
     ];
     return (
-      <RadioGroup variant="red" name="radio" id="radio" choices={radioValues} />
+      <RadioGroup variant="info" name="radio" id="radio" choices={radioValues} />
     )
   }}
 </Playground>
