--- a/src/Form/Checkbox.mdx
+++ b/src/Form/Checkbox.mdx
@@ -66,7 +66,7 @@ Form Checkbox component. Different sizes are available.
     ];
     return (
       <React.Fragment>
-        <Checkbox id="checkbox" name="checkbox" variant="red" />
+        <Checkbox id="checkbox" name="checkbox" variant="success" />
       </React.Fragment>
     )
   }}
