fix(Input): fix Input autofocus error

--- a/src/Form/Input.mdx
+++ b/src/Form/Input.mdx
@@ -19,7 +19,7 @@ Form input component. Different sizes are available.
 
 ### Default Input
 <Playground>
-   <Input placeholder="Example" label="Example" />
+   <Input placeholder="Example" label="Example" autofocus />
 </Playground>
 
 ### Multiline Input
