--- a/src/Flex/Flex.mdx
+++ b/src/Flex/Flex.mdx
@@ -12,6 +12,8 @@ import Box from '../Box';
 
 Quickly manage the layout, alignment, and sizing of grid columns, navigation, components, and more with a full suite of responsive flexbox utilities. For more complex implementations, custom CSS may be necessary.
 
+## Example
+
 <Playground>
   <Flex>
     <Box m={2} p={2} flex={1} style={{ backgroundColor: 'gainsboro' }}>I take up the remaining space</Box>
