fix: Fix Input background issues

--- a/src/Form/Input.mdx
+++ b/src/Form/Input.mdx
@@ -42,6 +42,21 @@ Form input component. Different sizes are available.
    <Input disabled placeholder="Example" label="Example" />
 </Playground>
 
+### Overridable Styles
+<Playground>
+   <Input placeholder="Example" label="Example" styles={{
+     Input: {
+       background: 'beige'
+     }
+   }} />
+
+   <Input floating placeholder="Example" label="Example" styles={{
+     Input: {
+       background: 'beige'
+     }
+   }} />
+</Playground>
+
 ### Sizes
 <Playground>
    <Input size="xs" placeholder="Example" label="Example" />
