feat: Grid components (#7)

--- a/docs/theme.mdx
+++ b/docs/theme.mdx
@@ -44,6 +44,17 @@ Refractal comes with a default theme. You can override any of these configuratio
     lg: 14,
     xl: 16,
   },
-  breakpoints: [386, 768, 1024],
+  breakpoints: [386, 768, 1024, 1440],
+  grid: {
+    containerMaxWidth: 1000,
+    gutter: 15,
+    columns: 12,
+    sizes: {
+      xs: 386,
+      sm: 768,
+      md: 1024,
+      lg: 1440,
+    },
+  },
 };
 ```
