--- a/src/Button/Button.mdx
+++ b/src/Button/Button.mdx
@@ -4,7 +4,7 @@ menu: Components
 ---
 
 import { Playground, PropsTable } from 'docz'
-import Button from './Button.jsx'
+import Button from './Button'
 
 # Button
 
@@ -48,7 +48,6 @@ Use the `variant` prop for predefined button variants. More colors may be added 
     <Button variant="danger">I'm Dangerous</Button>
     <Button variant="warning">I'm Cautious</Button>
     <Button variant="info">I'm Informational</Button>
-    <Button variant="inverted">I'm More Common</Button>
   </Button.Group>
 </Playground>
 
