--- a/src/Dropdown/Dropdown.mdx
+++ b/src/Dropdown/Dropdown.mdx
@@ -3,13 +3,14 @@ menu: Components
 name: Dropdown
 ---
 
-import { Playground, PropsTable } from 'docz'
-import Dropdown from './Dropdown.jsx'
-import Button from '../Button'
+import { Playground, PropsTable } from 'docz';
+import { Fragment } from 'react';
+import Dropdown from './Dropdown';
+import Button from '../Button';
 
 # Dropdown
 
-Easily display contextual overlays using custom trigger elements.
+Easily display contextual overlays using custom trigger elements. Dropdown's positioning system uses [Popper.js](https://github.com/FezVrasta/popper.js). Refer to their documentation for placement and option overrides.
 
 ## Props
 <PropsTable of={Dropdown} />
@@ -17,9 +18,11 @@ Easily display contextual overlays using custom trigger elements.
 ## Example
 <Playground>
   <Dropdown
+    width={250}
     trigger={<Button variant="success">Open Dropdown</Button>}
-    render={({ close }) => (
-      <div>
+  >
+    {({ close }) => (
+      <Fragment>
         <Dropdown.Header>Header</Dropdown.Header>
 
         <Dropdown.Body>
@@ -33,9 +36,9 @@ Easily display contextual overlays using custom trigger elements.
         </Dropdown.Body>
 
         <Dropdown.Footer>Footer</Dropdown.Footer>
-      </div>
+      </Fragment>
     )}
-  />
+  </Dropdown>
 </Playground>
 
 
