--- a/src/Grid/Grid.mdx
+++ b/src/Grid/Grid.mdx
@@ -1,6 +1,7 @@
 ---
-menu: Grid
-name: Column
+menu: Components
+name: Grid
+route: /grid
 ---
 
 import { Playground, PropsTable } from 'docz';
@@ -8,11 +9,98 @@ import { Playground, PropsTable } from 'docz';
 import Container from './Container';
 import Row from './Row';
 import Column from './Column';
-import ExampleBox from './ExampleBox'
+import Flex from '../Flex';
+import ExampleBox from './ExampleBox';
 
-# Column
+# Grid
 
-## Properties
+## Container
+
+### Properties
+
+<PropsTable of={Container} />
+
+### Standard Container
+<Playground>
+  <Container>
+    <div>I'm a container with content</div>
+  </Container>
+</Playground>
+
+### Fluid Container
+<Playground>
+  <Container fluid>
+    <div>I'm a container with content</div>
+  </Container>
+</Playground>
+
+## Row
+
+### Properties
+
+<PropsTable of={Row} />
+
+### Example
+
+Rows are usually found within a container to wrap columns.
+
+<Playground>
+  <Container>
+    <Row>
+      <Column>
+        <ExampleBox>Column</ExampleBox>
+      </Column>
+      <Column>
+        <ExampleBox>Column</ExampleBox>
+      </Column>
+      <Column>
+        <ExampleBox>Column</ExampleBox>
+      </Column>
+    </Row>
+  </Container>
+</Playground>
+
+### Reversed Row
+<Playground>
+  <Container>
+    <Row reverse>
+      <Column >
+        <ExampleBox>1</ExampleBox>
+      </Column>
+      <Column>
+        <ExampleBox>2</ExampleBox>
+      </Column>
+      <Column>
+        <ExampleBox>3</ExampleBox>
+      </Column>
+    </Row>
+  </Container>
+</Playground>
+
+### Vertical
+
+Rows can be also laid out vertically
+
+<Playground>
+  <Container>
+    <Row vertical>
+      <Column>
+        <ExampleBox>1</ExampleBox>
+      </Column>
+      <Column>
+        <ExampleBox>2</ExampleBox>
+      </Column>
+      <Column>
+        <ExampleBox>3</ExampleBox>
+      </Column>
+    </Row>
+  </Container>
+</Playground>
+
+
+## Column
+
+### Properties
 
 <PropsTable of={Column} />
 
