--- a/src/Modal/Modal.mdx
+++ b/src/Modal/Modal.mdx
@@ -4,19 +4,22 @@ name: Modal
 ---
 
 import { Playground, PropsTable } from 'docz'
-import Modal from './Modal.jsx'
+import Modal from './Modal'
 import ModalExample from './Modal.example'
 
 # Modal
 
 Modals are a great way to add dialogs to your site for lightboxes, user notifications, or completely custom content.
 
+## Props
+<PropsTable of={Modal} />
+
 ## Example
 
 Toggle a working modal demo by clicking the button below. It will slide up and fade in from the bottom of the page.
 
 <Playground>
-  <ModalExample />
+  <ModalExample body="I am an example modal that displays example content to prove that I can actually do some things" maxWidth={300} />
 </Playground>
 
 ## Handling Long Content
