fix(Dropdown): Style cleanup

--- a/src/Dropdown/Dropdown.mdx
+++ b/src/Dropdown/Dropdown.mdx
@@ -23,14 +23,14 @@ Easily display contextual overlays using custom trigger elements. Dropdown's pos
   >
     {({ close }) => (
       <Fragment>
-        <Dropdown.Header>Header</Dropdown.Header>
+        <Dropdown.Header title="Dropdown" />
 
         <Dropdown.Body>
-          <Dropdown.Title>Section One</Dropdown.Title>
+          <Dropdown.SectionTitle>Section One</Dropdown.SectionTitle>
           <Dropdown.Item>Item One</Dropdown.Item>
           <Dropdown.Item>Item Two</Dropdown.Item>
 
-          <Dropdown.Title>Section Two</Dropdown.Title>
+          <Dropdown.SectionTitle>Section Two</Dropdown.SectionTitle>
           <Dropdown.Item onClick={close}>Item One</Dropdown.Item>
           <Dropdown.Item disabled>Item Two</Dropdown.Item>
         </Dropdown.Body>
