--- a/src/Linkify/Linkify.mdx
+++ b/src/Linkify/Linkify.mdx
@@ -3,23 +3,27 @@ menu: Core
 name: Linkify
 ---
 
-import { Playground, PropsTable } from 'docz'
-import Linkify from './Linkify'
+import { Playground, PropsTable } from 'docz';
+import Linkify from './Linkify';
 
 # Linkify
 
-Automatically parse links contained in a body of text.
+Automatically parse links contained in a body of text. All props except for `linkStyle` are passed through directly to [react-markdown](https://github.com/rexxars/react-markdown), which `Linkify` uses internally.
+
+## Props
+<PropsTable of={Linkify} />
 
 ## Example
+
 <Playground>
   {() => {
     const testEvaluatedUrl = 'https://www.facebook.com/heydoctor.co';
     return (
       <Linkify linkStyle={{ color: 'magenta' }}>
-        <div>
-          Checkout http://google.com. <span onmouseover="alert('yo')"
-          >Another</span> one that's not so great is http://bing.com. You could also checkout duckduckgo.com if you're into that whole privacy thing. <img src="fake.jpg" onError={() => {}} alt="hacker" /> Oh, and you should also check out https://heydoctor.co. <Linkify>I wonder if nested Linkify works {testEvaluatedUrl}</Linkify>
-        </div>
+        Checkout http://google.com. <span onmouseover="alert('yo')">Another</span> one that's not so great is
+        http://bing.com. You could also checkout duckduckgo.com if you're into that whole privacy thing.
+        <img src="fake.jpg" onError={() => {}} alt="hacker" /> Oh, and you should also check out
+        https://heydoctor.co. And this [markdown link](https://heydoctor.com)
       </Linkify>
     );
   }}
