feat(Form): Add <PhoneInput /> and <DateInput />; Clean up <Select /> (#34)
- Adds new `<PhoneInput />` and `<DateInput />` components for easy input masking
- Fixes some existing styling issues with `<Select />`

--- a/src/Form/Input.mdx
+++ b/src/Form/Input.mdx
@@ -5,6 +5,8 @@ name: Input
 
 import { Playground, PropsTable } from 'docz'
 import Input from './Input'
+import PhoneInput from './PhoneInput';
+import DateInput from './DateInput';
 import Button from '../Button'
 import Formbot from './Formbot';
 
@@ -93,3 +95,11 @@ Form input component. Different sizes are available.
    <Input size="lg" placeholder="Example" label="Example" />
    <Input size="xl" placeholder="Example" label="Example" />
 </Playground>
+
+## Formatted Inputs
+
+### Phone Input
+<PhoneInput placeholder="Example" label="Phone Number" value="4088675309" />
+
+### Date Input
+<DateInput placeholder="Date of Birth" label="Date of Birth" value="12/05/1992" />
