--- a/src/Badge/Badge.mdx
+++ b/src/Badge/Badge.mdx
@@ -23,6 +23,7 @@ Documentation and examples for badges, our small count and labeling component.
   <Badge variant="success" ml={2}>I'm So Successful</Badge>
   <Badge variant="danger" ml={2}>I'm So Dangerous</Badge>
   <Badge variant="warning" ml={2}>💁‍♀️ Caution</Badge>
+  <Badge variant="grey" ml={2}>Grey</Badge>
 </Playground>
 
 ### Sizes
